--- a/myresume/templates/myapp/about.html
+++ b/myresume/templates/myapp/about.html
@@ -1,4 +1,4 @@
-{% extends 'myresume/templates/myapp/index.html' %}
+{% extends 'myapp/index.html' %}
 {% block body_block %}
 <div class="container">
     <h1 id='about'>ABOUT ME:</h1>
